packages/sycamore-macro/tests/component/inline-props-fail.stderr
error: expected `inline_props`
 --> tests/component/inline-props-fail.rs:3:13
  |
3 | #[component(not_inline_props)]
  |             ^^^^^^^^^^^^^^^^
