packages/sycamore-macro/tests/component/inline-props-fail.rs
use sycamore::prelude::*;

#[component(not_inline_props)]
fn NotInlineProps() -> View {
    view! {}
}

fn main() {}
